<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_in_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/count_clubs"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:text="@string/to_add_clubs"
        android:background="@drawable/shape_rounded_button"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/white"
        android:textAllCaps="true"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        android:text="@string/to_delete_clubs"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_rounded_button"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/white"
        android:textAllCaps="true"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn3"
        android:background="@drawable/shape_rounded_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn2"
        android:text="@string/to_add_one_club"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/white"
        android:textAllCaps="true"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn3"
        android:text="@string/to_delete_one_club"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_rounded_button"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/white"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>