<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/list"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_height="wrap_content"
                    android:text="@string/list"
                    android:background="@drawable/shape_rounded_button"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/grid"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/grid"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/shape_rounded_button"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/custom"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/opc"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/shape_rounded_button"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvListFootballClubs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_club_list"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:visibility="visible"

                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGridFootballClubs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:listitem="@layout/item_club_grid"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCustomFootballClubs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_24"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#2574FF"
        />
</androidx.constraintlayout.widget.ConstraintLayout>


